# CPP_lab1

./: CMakeLists.txt
src/lab/: CMakeLists.txt  fraction.cpp  fraction.h
src/utils/: programmerDetails.h
